--- a/index.html
+++ b/index.html
@@ -363,9 +363,9 @@
             <div class="footer-box">
                 <p class="form-footer-text">Subscribe</p>
                 <form class="form-footer-box">
-                    <label for="" class="footer-email-box">
+                    <label for="user-mail" class="footer-email-box">
                         E-mail
-                        <input type="email" name="email-box" placeholder="E-posta" class="mail-footer">
+                        <input type="email" name="email-box" id="user-mail" placeholder="E-posta" class="mail-footer">
                     </label>
                     <button type="submit" class="footer-btn">Subscribe
                         <svg width="24" height="24" class="footer-btn-svg">
@@ -399,10 +399,10 @@
                     </label>
                 </div>
                 <div class="modal-list">
-                    <label for="user-name" class="modal-name">
+                    <label for="user-phone" class="modal-name">
                         Phone
                        <div class="name-div">
-                        <input type="text" name="user-name" id="user-name" class="name-input">
+                        <input type="text" name="user-name" id="user-phone" class="name-input">
                         <svg width="18" height="24" class="name-svg">
                             <use href="./images/icons.svg#modal-name"></use>
                         </svg>
@@ -411,10 +411,10 @@
                     </label>
                 </div>
                 <div class="modal-list">
-                    <label for="user-name" class="modal-name">
+                    <label for="user-mail" class="modal-name">
                         Email
                        <div class="name-div">
-                        <input type="text" name="user-name" id="user-name" class="name-input">
+                        <input type="text" name="user-name" id="user-mail" class="name-input">
                         <svg width="18" height="24" class="name-svg">
                             <use href="./images/icons.svg#modal-name"></use>
                         </svg>
