--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                 <div class="modal-list">
                     <label for="user-name" class="modal-name">
                         Name
-                       <div class="name-div">
+                       <div class="name-modal">
                         <input type="text" name="user-name" id="user-name" class="name-input">
                         <svg width="18" height="24" class="name-svg">
                             <use href="./images/icons.svg#modal-name"></use>
@@ -401,7 +401,7 @@
                 <div class="modal-list">
                     <label for="user-phone" class="modal-name">
                         Phone
-                       <div class="name-div">
+                       <div class="name-modal">
                         <input type="text" name="user-name" id="user-phone" class="name-input">
                         <svg width="18" height="24" class="name-svg">
                             <use href="./images/icons.svg#modal-name"></use>
@@ -411,10 +411,10 @@
                     </label>
                 </div>
                 <div class="modal-list">
-                    <label for="user-mail" class="modal-name">
+                    <label for="user-email" class="modal-name">
                         Email
-                       <div class="name-div">
-                        <input type="text" name="user-name" id="user-mail" class="name-input">
+                       <div class="name-modal">
+                        <input type="text" name="user-name" id="user-email" class="name-input">
                         <svg width="18" height="24" class="name-svg">
                             <use href="./images/icons.svg#modal-name"></use>
                         </svg>
@@ -425,7 +425,7 @@
                 <div class="modal-list modal-comment-list">
                     <label for="user-comment" class="modal-comment">
                         Comment
-                       <div class="textarea-div">
+                       <div class="text-modal-comment">
                         <textarea name="user-comment" id="user-comment" placeholder="Text input" class="textarea-modal"></textarea>
                         
                        </div>
