--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                     </label>
                        <div class="form-box-content">
                         <input type="text" name="user-name" id="user-phone" class="name-input">
-                        <svg width="18" height="24" class="phone-svg">
+                        <svg width="18" height="24" class="name-svg">
                             <use href="./images/icons.svg#modal-name"></use>
                         </svg>
                        </div>
