--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                        </div>
                 </div>
                 <div class="modal-list modal-comment-list">
-                    <label for="user-comment" class="modal-comment">
+                    <label for="user-comment" class="modal-name">
                         Comment </label>
                             <textarea name="user-comment" id="user-comment" placeholder="Text input" class="textarea-modal"></textarea>  
                  </div>
