--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                 <form class="form-footer-box">
                     <label for="user-mail" class="footer-email-box">
                         E-mail
-                        <input type="email" name="email-box" id="user-mail" placeholder="E-posta" class="mail-footer">
+                        <input type="email" name="email-box" id="user-mail" class="mail-footer" placeholder="E-posta">
                     </label>
                     <button type="submit" class="footer-btn">Subscribe
                         <svg width="24" height="24" class="footer-btn-svg">
