--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                     </label>
                     <button type="submit" class="footer-btn">Subscribe
                         <svg width="24" height="24" class="footer-btn-svg">
-                            <use href="./images/icons.svg#icon-btn"></use>
+                            <use href="./images/icons.svg#icon-footer-btn"></use>
                         </svg>
                     </button>
                 </form>
@@ -393,7 +393,7 @@
                        <div class="form-box-content">
                         <input type="text" name="user-name" id="user-name" class="name-input">
                         <svg width="18" height="24" class="name-svg">
-                            <use href="./images/icons.svg#modal-name"></use>
+                            <use href="./images/icons.svg#icon-user"></use>
                         </svg>
                        </div>
                 </div>
@@ -404,7 +404,7 @@
                        <div class="form-box-content">
                         <input type="text" name="user-name" id="user-phone" class="name-input">
                         <svg width="18" height="24" class="name-svg">
-                            <use href="./images/icons.svg#modal-name"></use>
+                            <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
                        </div>
                         
@@ -417,7 +417,7 @@
                        <div class="form-box-content">
                         <input type="text" name="user-name" id="user-email" class="name-input">
                         <svg width="18" height="24" class="name-svg">
-                            <use href="./images/icons.svg#modal-name"></use>
+                            <use href="./images/icons.svg#icon-email"></use>
                         </svg>
                        </div>
                 </div>
@@ -431,7 +431,7 @@
                     <label for="user-privacy" class="modal-check-label">
                         <span class="checkbox-span" >
                             <svg width="10" height="8" class="check-svg">
-                                <use href="./images/icons.svg#privacy-svg"></use>
+                                <use href="./images/icons.svg#icon-privacy"></use>
                             </svg>
                         </span>
                         I accept the terms and conditions of the 
